# portmatching

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: bench.yml  bench.yml_disabled  ci.yml  datagen.yml  datagen.yml_disabled  profiling.yml  update_bench.yml  xxl.yml
benches/: criterion.rs  criterion.rs_disabled
datasets/large_circuits/: circuit_1.json  circuit_10.json  circuit_11.json  circuit_12.json  circuit_13.json  circuit_14.json  circuit_15.json  circuit_16.json  circuit_17.json  circuit_18.json  circuit_19.json  circuit_2.json  circuit_20.json  circuit_21.json  circuit_22.json  circuit_23.json  circuit_24.json  circuit_25.json  circuit_26.json  circuit_27.json  circuit_28.json  circuit_29.json  circuit_3.json  circuit_30.json  circuit_31.json  circuit_32.json  circuit_33.json  circuit_34.json  circuit_35.json  circuit_36.json  circuit_37.json  circuit_38.json  circuit_39.json  circuit_4.json  circuit_40.json  circuit_41.json  circuit_42.json  circuit_43.json  circuit_44.json  circuit_45.json  (+59 more)
datasets/small_circuits/: pattern_0.json  pattern_1.json  pattern_10.json  pattern_100.json  pattern_101.json  pattern_102.json  pattern_103.json  pattern_104.json  pattern_105.json  pattern_106.json  pattern_107.json  pattern_108.json  pattern_109.json  pattern_11.json  pattern_110.json  pattern_111.json  pattern_112.json  pattern_113.json  pattern_114.json  pattern_115.json  pattern_116.json  pattern_117.json  pattern_118.json  pattern_119.json  pattern_12.json  pattern_120.json  pattern_121.json  pattern_122.json  pattern_123.json  pattern_124.json  pattern_125.json  pattern_126.json  pattern_127.json  pattern_128.json  pattern_129.json  pattern_13.json  pattern_130.json  pattern_131.json  pattern_132.json  pattern_133.json  (+960 more)
datasets/small_circuits/3_qubits/: pattern_0.json  pattern_1.json  pattern_10.json  pattern_100.json  pattern_101.json  pattern_102.json  pattern_103.json  pattern_104.json  pattern_105.json  pattern_106.json  pattern_107.json  pattern_108.json  pattern_109.json  pattern_11.json  pattern_110.json  pattern_111.json  pattern_112.json  pattern_113.json  pattern_114.json  pattern_115.json  pattern_116.json  pattern_117.json  pattern_118.json  pattern_119.json  pattern_12.json  pattern_120.json  pattern_121.json  pattern_122.json  pattern_123.json  pattern_124.json  pattern_125.json  pattern_126.json  pattern_127.json  pattern_128.json  pattern_129.json  pattern_13.json  pattern_130.json  pattern_131.json  pattern_132.json  pattern_133.json  (+960 more)
datasets/small_circuits/5_qubits/: pattern_0.json  pattern_1.json  pattern_10.json  pattern_100.json  pattern_101.json  pattern_102.json  pattern_103.json  pattern_104.json  pattern_105.json  pattern_106.json  pattern_107.json  pattern_108.json  pattern_109.json  pattern_11.json  pattern_110.json  pattern_111.json  pattern_112.json  pattern_113.json  pattern_114.json  pattern_115.json  pattern_116.json  pattern_117.json  pattern_118.json  pattern_119.json  pattern_12.json  pattern_120.json  pattern_121.json  pattern_122.json  pattern_123.json  pattern_124.json  pattern_125.json  pattern_126.json  pattern_127.json  pattern_128.json  pattern_129.json  pattern_13.json  pattern_130.json  pattern_131.json  pattern_132.json  pattern_133.json  (+960 more)
datasets/xxl/large_circuits/: circuit_0.json
datasets/xxl/small_circuits/: pattern_0.json  pattern_1.json  pattern_10.json  pattern_100.json  pattern_1000.json  pattern_1001.json  pattern_1002.json  pattern_1003.json  pattern_1004.json  pattern_1005.json  pattern_1006.json  pattern_1007.json  pattern_1008.json  pattern_1009.json  pattern_101.json  pattern_1010.json  pattern_1011.json  pattern_1012.json  pattern_1013.json  pattern_1014.json  (+4980 more)
examples/: count_transitions.rs  large_graph.rs  large_graph.rs_disabled  matchers.rs  matchers.rs_disabled  optimise_graph.rs  optimise_graph.rs_disabled
proptest-regressions/addresses/: base.txt
proptest-regressions/addressing/: base.txt  pg.txt
proptest-regressions/matrix/: proptest.txt
proptest-regressions/string/: proptest.txt
proptest-regressions/utils/: address.txt  skeleton_address.txt  unique_stack.txt
src/: automaton.rs  branch_selector.rs  concrete.rs  constraint.rs  constraint_class.rs  constraint_tree.rs  graph_traits.rs  indexing.rs  lib.rs  matcher.rs  matrix.rs  mutex_tree.rs  new_api_v04.rs  pattern.rs  patterns.rs  portgraph.rs  predicate.rs  string.rs  symbol_map.rs  utils.rs  variable.rs  weighted_graph.rs
src/addresses/: base.rs  mod.rs
src/addressing/: cache.rs  constraint.rs  mod.rs  pg.rs  portgraph.rs  skeleton.rs
src/automaton/: builder.rs  builders.rs  mod.rs  modify.rs  traced.rs  traversal.rs  view.rs
src/concrete/: matrix.rs  portgraph.rs  string.rs
src/constraint/: elementary.rs  evaluator.rs  mod.rs  pattern.rs  predicate.rs  selector.rs  skeleton.rs  tag.rs  unweighted.rs  vec.rs  weighted.rs
src/constraint_tree/: build.rs
src/graph_tries/: base.rs  build.rs  cached.rs  mod.rs  optimise.rs
src/indexing/: binding_builder.rs
src/matcher/: many_patterns.rs  mod.rs  single_pattern.rs
src/matrix/: pattern.rs  proptest.rs
src/mutex_tree/: build.rs
src/new_api_v04/: constraint.rs  mutex_tree.rs  predicate.rs  variable.rs
src/pattern/: mod.rs  unweighted.rs  weighted.rs
src/patterns/: line_pattern.rs  mod.rs  pattern.rs
src/portgraph/: constraint.rs  indexing.rs  mod.rs  pattern.rs  portmatcher.rs  predicate.rs  root_candidates.rs  tofix.rs  weighted_graph.rs
src/predicate/: pattern.rs  selector.rs
src/string/: constraint.rs  pattern.rs  predicate.rs  proptest.rs
src/utils/: address.rs  age.rs  causal.rs  collect_min.rs  connected_components.rs  cover.rs  depth.rs  empty_or_iter.rs  iter.rs  mark_last.rs  mod.rs  ninj_map.rs  perm_port.rs  portgraph.rs  pre_order.rs  sets_of_sets.rs  shared_iter.rs  skeleton_address.rs  subgraph.rs  test.rs  test_utils.rs  toposort.rs  tracer.rs  unique_stack.rs  zero_range.rs
tests/: from_saved_patterns.rs  from_testcases.rs  from_testcases.rs_disabled  proptests.proptest-regressions  proptests.rs  proptests.rs_disabled
(+40641 files in other folders)
