[package]
name = "portmatching"
description = "Fast Graph Matching for Port Graphs"
authors = ["Luca Mondada"]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.2"
bitvec = "1.0.1"
portgraph = { git = "https://github.com/CQCL/portgraph.git", rev = "1a59922", features = ["petgraph"] }
serde = { version = "1.0.152", features = ["derive"], optional = true }
smallvec = "1.10.0"
itertools = "0.10.5"

# these are for datagen only
rand = { version = "0.8.5", optional = true }
serde_json = { version = "1.0.96", optional = true }
clap = { version = "4.2.2", features = ["derive"], optional = true }
rmp-serde = { version = "1.1.1", optional = true }
glob = { version = "0.3.1", optional = true }
csv = { version = "1.2.2", optional = true }
derive_more = "0.99.17"
rustc-hash = "1.1.0"
petgraph = { version = "0.6.3", default-features = false }

[features]
serde = ["dep:serde", "portgraph/serde", "smallvec/serde"]
datagen = ["dep:rand", "dep:serde_json", "dep:clap", "dep:rmp-serde", "dep:glob", "dep:csv"]

[dev-dependencies]
proptest = "1.1.0"
serde = "1.0.156"
serde_json = "1.0.96"
glob = "0.3.1"
criterion = { version = "0.4.0", features = ["html_reports"] }

[dev-dependencies.portgraph]
git = "https://github.com/CQCL/portgraph.git"
rev = "1a59922"
features = ["proptest", "serde"]

[[example]]
name = "large_graph"
required-features = ["serde", "datagen"]

[[example]]
name = "optimise_graph"
required-features = ["serde", "datagen"]

[[test]]
name = "from_saved_patterns"
required-features = ["serde"]

[[bin]]
name = "data_generation"
required-features = ["datagen", "serde"]

[[bench]]
name = "criterion"
harness = false
required-features = ["datagen", "serde"]
