[package]
name = "portmatching"
version = "0.3.0"
license = "MIT"

readme = "README.md"
documentation = "https://docs.rs/portmatching/"
repository = "https://github.com/lmondada/portmatching"

description = "Fast Graph Matching for Port Graphs"
keywords = ["data-structure", "graph", "subgraph-isomorphism"]
categories = ["algorithms"]

authors = ["Luca Mondada"]
edition = "2021"
rust-version = "1.75"

exclude = ["tests/legacy_saved_patterns/*"]
[lib]
bench = false
name = "portmatching"
path = "src/lib.rs"

[dependencies]
bimap = "0.6.2"
bitvec = "1.0.1"
portgraph = { version = "0.12.0", features = ["petgraph"], optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }
smallvec = "1.10.0"
itertools = "0.10.5"

# these are for datagen only
rand = { version = "0.8.5", optional = true }
serde_json = { version = "1.0.96", optional = true }
clap = { version = "4.2.2", features = ["derive"], optional = true }
rmp-serde = { version = "1.1.1", optional = true }
glob = { version = "0.3.1", optional = true }
csv = { version = "1.2.2", optional = true }
derive_more = "0.99.17"
rustc-hash = "1.1.0"
petgraph = { version = "0.6.5", features = ["serde-1"] }
thiserror = "1.0.61"
union-find = "0.4.2"
delegate = "0.12.0"

[features]
serde = ["dep:serde", "portgraph/serde", "smallvec/serde"]
portgraph = ["dep:portgraph"]
datagen = [
    "dep:rand",
    "dep:serde_json",
    "dep:clap",
    "dep:rmp-serde",
    "dep:glob",
    "dep:csv",
]

[dev-dependencies]
proptest = "1.1.0"
serde = "1.0.156"
serde_json = "1.0.96"
glob = "0.3.1"
criterion = { version = "0.4.0", features = ["html_reports"] }
rstest = "0.21.0"

[dev-dependencies.portgraph]
features = ["proptest", "serde"]
version = "0.12.0"

# [[example]]
# name = "large_graph"
# required-features = ["serde", "datagen"]

# [[example]]
# name = "optimise_graph"
# required-features = ["serde", "datagen"]

# [[test]]
# name = "from_testcases"
# required-features = ["serde"]

# [[bin]]
# name = "data_generation"
# required-features = ["datagen", "serde"]

# [[bench]]
# name = "criterion"
# harness = false
# required-features = ["datagen", "serde"]
