[package]
name = "portmatching"
version = "0.4.0-rc.3"
license = "MIT"

readme = "README.md"
documentation = "https://docs.rs/portmatching/"
repository = "https://github.com/lmondada/portmatching"

description = "Fast Graph Matching for Port Graphs"
keywords = ["data-structure", "graph", "subgraph-isomorphism"]
categories = ["algorithms"]

authors = ["Luca Mondada"]
edition = "2021"
rust-version = "1.75"

exclude = ["tests/legacy_saved_patterns/*"]
[lib]
bench = false
name = "portmatching"
path = "src/lib.rs"

[dependencies]
bimap = "0.6.2"
bitvec = "1.0.1"
portgraph = { version = "0.12.2", features = ["petgraph"], optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }
smallvec = "1.10.0"
itertools = "0.10.5"

rand = { version = "0.8.5", optional = true }
serde_json = { version = "1.0.96", optional = true }
clap = { version = "4.2.2", features = ["derive"], optional = true }
rmp-serde = { version = "1.1.1", optional = true }
glob = { version = "0.3.1", optional = true }
csv = { version = "1.2.2", optional = true }
derive_more = "0.99.17"
rustc-hash = "1.1.0"
petgraph = { git = "https://github.com/petgraph/petgraph", rev = "4505389", features = [
    "serde-1",
] }
thiserror = "1.0.61"
union-find = "0.4.2"
delegate = "0.12.0"
proptest = { version = "1.1.0", optional = true }
derive-where = "1.2.7"

[features]
serde = ["dep:serde", "portgraph/serde", "smallvec/serde"]
portgraph = ["dep:portgraph"]
proptest = ["dep:proptest", "dep:portgraph", "portgraph/proptest", "dep:glob"]
datagen = [
    "dep:rand",
    "dep:serde_json",
    "dep:clap",
    "dep:rmp-serde",
    "dep:glob",
    "dep:csv",
]

[dev-dependencies]
proptest = "1.1.0"
serde = "1.0.156"
serde_json = "1.0.96"
glob = "0.3.1"
criterion = { version = "0.4.0", features = ["html_reports"] }
rstest = "0.21.0"
insta = { version = "1.39.0", features = ["yaml"] }

[dev-dependencies.portgraph]
features = ["proptest", "serde"]
version = "0.12.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[[example]]
name = "matchers"
required-features = ["portgraph"]

# name = "large_graph"
# required-features = ["serde", "datagen", "portgraph"]

# [[example]]
# name = "optimise_graph"
# required-features = ["serde", "datagen"]

[[test]]
name = "proptests"
required-features = ["proptest", "serde", "portgraph"]

[[test]]
name = "from_testcases"
required-features = ["serde", "portgraph"]

# [[bin]]
# name = "data_generation"
# required-features = ["datagen", "serde"]

# [[bench]]
# name = "criterion"
# harness = false
# required-features = ["datagen", "serde"]

[patch.crates-io]
petgraph = { git = "https://github.com/petgraph/petgraph", rev = "4505389", features = [
    "serde-1",
] }
